--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TaskPlannerApp</title>
+    <title>TickTask</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <!--%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %> -->
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <% if notice %>
+      <p class="notice"><%= notice %></p>
+    <% end %>
+
+    <% if alert %>
+      <p class="alert"><%= alert %></p>
+    <% end %>
+
+    <%= render 'layouts/navbar' %>
+    
+    <div>
+      <%= render 'layouts/categories_sidebar' %>
+      <%= yield %>
+    </div>
   </body>
 </html>
