--- a/app/views/layouts/_categories_sidebar.html.erb
+++ b/app/views/layouts/_categories_sidebar.html.erb
@@ -7,7 +7,7 @@
         <% current_user.categories.each do |category| %>
           <li><%= link_to category.name, category %></li>
         <% end %>
-        <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li> 
+        <li><%= link_to 'Logout', destroy_user_session_path, data: {turbo_method: :delete} %></li> 
       </ul>
     </div>
   </aside>
