--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -14,7 +14,9 @@
         <p>Title:<%= task.title %></p>
         <p>Description:<%= task.description%></p>
         <p>Due Date:<%= task.due_date.strftime("%B %d, %Y %I:%M %p") %></p>
-        <p>Schedule Date:<%= task.scheduled_date.strftime("%B %d, %Y %I:%M %p") %></p>
+        <% if task.scheduled_date  %>
+          <p>Schedule Date:<%= task.scheduled_date.strftime("%B %d, %Y %I:%M %p") %></p>
+        <% end %>
         <p>Status:<%=task.status %></p>
 
         <%= link_to 'Edit', edit_category_task_path(@category, task) %> |
