feat: streamline date-time input handling and add class names

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,4 +1,4 @@
-<!-- app/views/categories/new.html.erb -->
-<h1>New Category</h1>
-
-<%= render 'form', category: @category %>
+<div class="new_category">
+    <h1>New Category</h1>
+    <%= render 'form', category: @category %>
+</div>
