--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,11 +1,15 @@
 <%= form_with(model: category, local: true) do |form| %>
-    <% if category.errors.any? %>
-        <div class="errors">
-            <% category.errors.full_messages.each do |message| %>
-                <%= message %>
-            <% end %>
-        </div>
-    <% end %>
+    <div class="errors">
+        <% if category.errors.any? %>
+            <ul class="error_message">
+                <% category.errors.full_messages.each do |message| %>
+                    <li class="error_card">
+                        <%= message %>
+                    </li>
+                <% end %>
+            </ul>
+        <% end %>
+    </div>
 
     <div class="field">
         <%= form.label :name %>
