--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Edit Category</h1>
-
-<%= render 'form', category: @category %>
-
-<%= link_to "Back to #{@category.name}", @category %>
+<div class="edit_category">
+    <h1>Edit Category</h1>
+    <%= render 'form', category: @category %>
+    <%= link_to "Back to #{@category.name}", @category, class: 'back_category_link'%>
+</div>
