--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,38 +1,44 @@
 <%= form_with(model: [ @category, @task ], local: true) do |form| %>
-  <% if task.errors.any? %>
-        <div class="errors">
-            <% task.errors.full_messages.each do |message| %>
-                <%= message %>
-            <% end %>
-        </div>
-    <% end %>
+    <div class="errors">
+        <% if task.errors.any? %>
+            <div class="errors">
+                <% task.errors.full_messages.each do |message| %>
+                    <li class="error_card">
+                        <%= message %>
+                    </li>
+                <% end %>
+            </div>
+        <% end %>
+    </div>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :task_title %>
-  </div>
+    <div class="field">
+        <%= form.label :title %>
+        <%= form.text_field :title, id: :task_title %>
+    </div>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description, id: :task_description %>
-  </div>
+    <div class="field">
+        <%= form.label :description %>
+        <%= form.text_area :description, id: :task_description %>
+    </div>
 
-  <div class="field">
-    <%= form.label :due_date %>
-    <%= form.datetime_local_field :due_date, id: :task_due_date %>
-  </div>
+    <div class="field">
+        <%= form.label :due_date %>
+        <%= form.date_field :due_date, id: :task_due_date %>
+        <%= form.time_field :due_time, id: :task_due_time, required: false, include_blank: true %>
+    </div>
 
-  <div class="field">
-    <%= form.label :scheduled_date %>
-    <%= form.datetime_local_field :scheduled_date, id: :task_scheduled_date %>
-  </div>
+    <div class="field">
+        <%= form.label :scheduled_date %>
+        <%= form.date_field :scheduled_date, id: :task_scheduled_date %>
+        <%= form.time_field :scheduled_time, id: :task_scheduled_time, required: false, include_blank: true %>
+    </div>
 
-  <div class="field">
-    <%= form.label :status %>
-    <%= form.select :status, ['pending', 'completed'], id: :task_status %>
-  </div>
+    <div class="field">
+        <%= form.label :status %>
+        <%= form.select :status, ['pending', 'completed'], id: :task_status %>
+    </div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+    <div class="actions">
+        <%= form.submit %>
+    </div>
 <% end %>
