--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Edit Task</h1>
-
-<%= render 'form', task: @task %>
-
-<%= link_to 'Back to Tasks', @category %>
+<div class="edit_task">
+    <h1>Edit Task</h1>
+    <%= render 'form', task: @task %>
+    <%= link_to 'Back to Tasks', @category, class: 'back_task_link' %>
+</div>
