--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Task</h1>
-
-<%= render 'form', task: @task %>
-
-<%= link_to 'Back to Tasks', @category%>
+<div class="new_task">
+    <h1>New Task</h1>
+    <%= render 'form', task: @task %>
+    <%= link_to 'Back to Tasks', @category, class: 'back_task_link' %>
+</div>
