--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,9 +14,9 @@ body {
 
 .content {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     padding: 20px;
-    min-height: 100vh;
+    min-height: 80vh;
     transition: margin-left 0.3s ease; 
 }
 
@@ -53,3 +53,4 @@ a {
 
 @import 'navbar';
 @import 'sidebar';
+@import 'page_content';
