--- a/app/views/layouts/_categories_sidebar.html.erb
+++ b/app/views/layouts/_categories_sidebar.html.erb
@@ -1,22 +1,20 @@
 <% if user_signed_in? %>
-    <div class="categories_sidebar">
-        <div class="sidebar_content">
-            <div class="sidebar_header">
-                <h2>Categories</h2>
-                <%= link_to new_category_path, class: 'new_category_link' do %>
-                    <i class="material-icons">add</i>
-                <% end %>
-            </div>
-            <ul class="categories_list">
-                <% current_user.categories.each do |category| %>
-                    <% is_active = "active" if current_page?(category) %>
-                    <li class="category_card <%= is_active %>">
+    <div class="sidebar_container">
+        <div class="sidebar_header">
+            <h2>Categories</h2>
+            <%= link_to new_category_path, class: 'new_category_link' do %>
+                <i class="material-icons">add</i>
+            <% end %>
+        </div>
+        <ul class="categories_list">
+            <% current_user.categories.each do |category| %>
+                <% is_active = "active" if current_page?(category) %>
+                <li class="category_card <%= is_active %>">
                     <% if category.name != nil %>
                         <%= link_to category.name, category, class: 'category_name_link' %>
                     <%end%>
-                    </li>
-                <% end %>
-            </ul>
-        </div>
+                </li>
+            <% end %>
+        </ul>
     </div>
 <%end%>
