style: update and refine show view styles

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -25,24 +25,41 @@
         <ul class="task_list">
             <% @category.tasks.each do |task| %>
                 <li class="task_card">
-                    <p>Title:<%= task.title %></p>
-                    <p>Due Date:<%= task.due_date.strftime("%B %d, %Y") %>
-                        <% if task.due_date.strftime("%H:%M") != "00:00" %>
-                            at <%= task.due_date.strftime("%I:%M %p") %>
+                    <div class="buttons">
+                        <%= link_to edit_category_task_path(@category, task), class: 'edit_category_link' do %>
+                            <i class="material-icons">edit</i>
                         <% end %>
-                    </p>
-                    <% if task.scheduled_date  %>
-                        <p>Schedule Date:<%= task.scheduled_date.strftime("%B %d, %Y") %>
-                            <% if task.scheduled_date.strftime("%H:%M") != "00:00" %>
-                            at <%= task.scheduled_date.strftime("%I:%M %p") %>
+                        <%= link_to category_task_path(@category, task), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'delete_category_link' do %>
+                            <i class="material-icons">delete</i>
+                        <% end %>
+                    </div>
+
+                    <div class="task_content">
+                        <h2><%= task.title %></h2>
+                        <p class="task_status">
+                            <% if task.status == 'pending' %>
+                                <i class="material-icons">more_horiz</i>
+                            <% else %>
+                                <i class="material-icons">task_alt</i>
+                            <% end %>
+
+                            <%= task.status %>
+                        </p>
+                        <p>
+                            <%= task.due_date.strftime("%B %d, %Y") %>
+                            <% if task.due_date.strftime("%H:%M") != "00:00" %>
+                                at <%= task.due_date.strftime("%I:%M %p") %>
                             <% end %>
                         </p>
-                    <% end %>
-                    <p>Status:<%=task.status %></p>
-
-                    <div class="buttons">
-                        <%= link_to 'Edit', edit_category_task_path(@category, task), class: 'edit_category_link' %> |
-                        <%= link_to 'Delete', category_task_path(@category, task), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'delete_category_link' %>
+                        <% if task.scheduled_date && task.scheduled_date.to_date == Date.today %>
+                            <p>to do today</p>
+                        <%# elsif task.scheduled_date %>
+                            <!--<p>Scheduled:<%= task.scheduled_date.strftime("%B %d, %Y") %>
+                                <% if task.scheduled_date.strftime("%H:%M") != "00:00" %>
+                                at <%= task.scheduled_date.strftime("%I:%M %p") %>
+                                <% end %>
+                            </p>-->
+                        <% end %>
                     </div>
                 </li>
             <% end %>
