--- a/app/assets/stylesheets/_page_content.scss
+++ b/app/assets/stylesheets/_page_content.scss
@@ -94,7 +94,54 @@
     margin-bottom: 10px;
     display: flex;
     align-items: center;
-    flex-direction: column;
-    cursor: pointer;
     background-color: #ffeff0;
+    border: 2px solid #593b3a;
+    width: 20vw;
+    border-radius: 20px;
+    padding: 10px;
+    .buttons {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin: 0 15px 0 10px ;
+        .material-icons {
+            color: #593b3a;
+            text-decoration: none;
+            font-size: 20px;
+            padding: 10px;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+            &:hover {
+                transform: scale(1.2);
+            }
+        }
+    }
+}
+
+.task_content{
+    display: flex;
+    flex-direction: column;
+    h2 {
+        font-size: 15px;
+        color:#593b3a;
+        margin: 0;
+    }
+    p {
+        font-size: 12px;
+        color:#593b3a;
+        margin: 0;
+    }
+    .material-icons {
+        color: #593b3a;
+        text-decoration: none;
+        font-size: 15px;
+        cursor: pointer;
+        font-weight: thin;
+        margin-right: 5px;
+    }
+}
+
+.task_status {
+    display: flex;
+    align-items: center;
 }
