--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -4,6 +4,7 @@
     padding: 10px 0; 
     font-family: "Poppins", sans-serif;
     border-radius: 0 0 20px 20px;
+    border: 2px solid #593b3a;
 }
 
 .navbar_content {
