--- a/app/assets/stylesheets/_page_content.scss
+++ b/app/assets/stylesheets/_page_content.scss
@@ -7,6 +7,7 @@
     width: 62vw;
     box-sizing: border-box;
     border-radius: 30px;
+    border: 2px solid #593b3a;
 }
 
 .category_task_container {
@@ -23,6 +24,7 @@
     background-color: #fbebec;
     border-radius: 30px 30px 0 0;
     padding: 0 20px;
+    border-bottom: 2px solid #593b3a;
     .category_title{
         display: flex;
         flex-direction: column;
@@ -83,6 +85,9 @@
 }
 
 .task_list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 10px;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -96,7 +101,7 @@
     align-items: center;
     background-color: #ffeff0;
     border: 2px solid #593b3a;
-    width: 20vw;
+    width: 17vw;
     border-radius: 20px;
     padding: 10px;
     .buttons {
@@ -116,6 +121,10 @@
             }
         }
     }
+}
+
+.task_card_completed {
+    background-color: #f1cfcf;
 }
 
 .task_content{
@@ -141,7 +150,7 @@
     }
 }
 
-.task_status {
+.task_status, .scheduled_date {
     display: flex;
     align-items: center;
 }
